# ne697-lectures

./: .gitignore  README.md
assignment6/: plot.py
event_recon_demo/: CMakeLists.txt  README.md  plot.py  plot_cs137.py  plot_filter_e-.py
event_recon_demo/cmake/: clang-format.cmake
event_recon_demo/include/: actioninitialization.hpp  detectorconstruction.hpp  eventaction.hpp  geometrymessenger.hpp  hit.hpp  pga.hpp  run.hpp  runaction.hpp  runmessenger.hpp  sensitivedetector.hpp
event_recon_demo/scripts/: init.mac  init_vis.mac  tests.mac  vis.mac
event_recon_demo/src/: actioninitialization.cpp  detectorconstruction.cpp  eventaction.cpp  geometrymessenger.cpp  hit.cpp  main.cpp  pga.cpp  run.cpp  runaction.cpp  runmessenger.cpp  sensitivedetector.cpp
lecture03/: CMakeLists.txt  README.md  hello.cpp
lecture05/: CMakeLists.txt  arrays.cpp  operators.cpp
lecture06/: CMakeLists.txt  pointers.cpp
lecture07/: classes.cpp  classes2.cpp  functions.cpp  pointers2.cpp
lecture08/: classes2.cpp  const_corr.cpp  functions_short.cpp
lecture08/include/: point.hpp
lecture08/src/: main.cpp  point.cpp
lecture09/: CMakeLists.txt  functions.cpp  map_demo.cpp
lecture09/include/: point.hpp
lecture09/mc1d/: CMakeLists.txt
lecture09/mc1d/include/: argparser.hpp
lecture09/mc1d/src/: argparser.cpp
lecture09/src/: main.cpp  point.cpp
lecture10/: CMakeLists.txt  main.cpp  point.hpp
lecture10/mc1d/: CMakeLists.txt
lecture10/mc1d/include/: argparser.hpp  runmanager.hpp
lecture10/mc1d/src/: argparser.cpp  main.cpp  runmanager.cpp
lecture11/: CMakeLists.txt  main.cpp  point.hpp
lecture12/: README.md
lecture15/: .gitignore  settings.json
lecture15/B1/: CMakeLists.txt  lecture15.mac
lecture15/B1/src/: B1EventAction.cc
lecture16/: README.md
lecture20/: README.md
mc1d/include/: argparser.hpp  hit.hpp  particle.hpp  runmanager.hpp
mc1d/src/: argparser.cpp  main.cpp  particle.cpp  runmanager.cpp
